# jbDE-windows-port

./: .gitignore  .gitmodules  CMakeLists.txt
src/data/: LeeGelList.json  bayer.h  colors.h  glyphLoader.h  paletteLoader.h  spaceship.h  wordlistLoader.h
src/engine/: config.json  dataStructs.h  engine.cc  engine.h  engineImguiUtils.cc  engineInit.cc  engineUtils.cc  includes.h
src/engine/coreUtils/: image2.h  inputHandler.h  math.h  terminal.h  texture.h  timer.h  window.h
src/engine/shaders/: tonemap.cs.glsl
src/engine/shaders/lib/: aetherScene.h  bayerPatterns.h  colorRamps.glsl.h  colorspaceConversions.glsl  intersect.h  mathUtils.h  normalEncodeDecode.h  oldTestChamber.h.glsl  pbrConstants.glsl  random.h  rayStateNewton.h.glsl  shaderWrapper.h  spectrumXYZ.h  srgbConvertMini.h  stb_include.h  traverse.h
src/engine/shaders/lib/VoraldoCompatibility/: hg_sdf.glsl
src/projects/Aquaria/: main.cc
src/projects/Aquaria/shaders/: dummyDraw.cs.glsl
src/projects/Benchmark/: main.cc
src/projects/Benchmark/shaders/: rngAtomic.cs.glsl
src/projects/CellularAutomata/1D/: main.cc
src/projects/CellularAutomata/CAHistory/: main.cc
src/projects/CellularAutomata/CAHistory3D/: main.cc
src/projects/CellularAutomata/CAHistory3D/shaders/: update.cs.glsl
src/projects/CellularAutomata/GoL/: main.cc
src/projects/CellularAutomata/bitPlanes/: main.cc
src/projects/CellularAutomata/colorSplit/: main.cc
src/projects/CellularAutomata/table/: main.cc
src/projects/CellularAutomata/table/shaders/: ruleWrite.cs.glsl  update.cs.glsl
src/projects/CrystalViewer/: main.cc
src/projects/CrystalViewer/shaders/: draw.cs.glsl  pointSplat.cs.glsl
src/projects/DLA/: DLA.h  main.cc
src/projects/DLA/shaders/: dla.cs.glsl  draw.cs.glsl
src/projects/EngineDemo/: main.cc  main_old.cpp
src/projects/IFS/: main.cc  operations.h
src/projects/IFS/shaders/: update.cs.glsl
src/projects/Impostors/Chorizo/: chorizo.h
src/projects/Impostors/Chorizo/shaders/: bounds.cs.glsl  draw.cs.glsl
src/projects/Impostors/ChorizoForest/: chorizo.h  generate.h
src/projects/Impostors/ChorizoForest/shaders/: bounds.cs.glsl
src/projects/Impostors/ChorizoSoftbody/: chorizo.h  generate.h  model.cc
src/projects/Impostors/ChorizoSoftbody/shaders/: bounds.cs.glsl
src/projects/Impostors/ProjectedFramebuffers/: main.cc  projectedFramebuffers.h
src/projects/Impostors/ProjectedFramebuffers/shaders/: deferred.cs.glsl  sphere.vs.glsl
src/projects/Impostors/Sussudio/: main.cc  notes.txt  sussudio.h
src/projects/Impostors/Vertexture/: main.cc  vertexture.h
src/projects/Impostors/VertextureClassic/: main.cc  vertexture.h  vertextureModels.h
src/projects/LineSpam/: LineSpam.h  main.cc
src/projects/LumaMesh/: LineSpam.h  main.cc
src/projects/LumaMesh/shaders/: composite.cs.glsl  draw.cs.glsl  line.fs.glsl  line.vs.glsl  opaqueDraw.cs.glsl  opaquePreZ.cs.glsl
src/projects/PathTracing/Aether/: aether.h  aether2.h  light.h  main.cc  main_.cc  main__.cc  spectralToolkit.h
src/projects/PathTracing/Aether/shaders/: draw.cs.glsl  sim.cs.glsl  simulate.cs.glsl
src/projects/PathTracing/BVHtest/: bvh.h  main.cc
src/projects/PathTracing/Caustic/: main.cc
src/projects/PathTracing/Caustic/shaders/: draw.cs.glsl  simulate.cs.glsl
src/projects/PathTracing/CellarDoor/: main.cc
src/projects/PathTracing/Daedalus/: daedalus.h  daedalusConfig.h  daedalusData.cc  daedalusImgui.cc  tileDispenser.h
src/projects/PathTracing/Daedalus/shaders/: pathtrace.cs.glsl  present.cs.glsl
src/projects/PathTracing/Icarus/: icarusData.h  icarusImGUI.h  icarusMain.h  icarusView.h
src/projects/PathTracing/Icarus/shaders/: rayGenerate.cs.glsl  (+4 more)
src/projects/PathTracing/Newton/: light.h  main.cc
src/projects/PathTracing/Siren/: main.cc
src/projects/PathTracing/path2D/: main.cc
src/projects/PathTracing/path2D_forward/: main.cc
src/projects/PathTracing/path2D_wavefront/: main.cc
src/projects/Physarum/: presets.json
src/projects/Physarum/2.5D/: main.cc
src/projects/Physarum/2D/: main.cc
src/projects/Physarum/2D_inertia/: main.cc
src/projects/Physarum/3D/: main.cc  presets.json
src/projects/Physarum/Embossed/: main.cc
src/projects/Raqia/: main.cc
src/projects/Raqia/shaders/: deferred.cs.glsl  draw.cs.glsl  grass.cs.glsl  lighting.cs.glsl
src/projects/SignalProcessing/Adam/: main.cc
src/projects/SignalProcessing/CantorDust/: main.cc
src/projects/SignalProcessing/GPUSpherePack/: main.cc
src/projects/SignalProcessing/MNIST/: main.cc  other.h
src/projects/SignalProcessing/Spectrogram/: main.cc
src/projects/SignalProcessing/jbPaint/: main.cc
src/projects/Silage/: main.cc
src/projects/Silage/shaders/: draw.cs.glsl
src/projects/SoftBodies/CPU/: main.cc  model.cc
src/projects/SpaceGame/: game.cc  game.h  lineDraw.h  main.cc
src/projects/SpaceGame/shaders/: bvh.cs.glsl  draw.cs.glsl  lineClear.cs.glsl  lineComposite.cs.glsl  lineDraw.cs.glsl  sprite.cs.glsl  text.cs.glsl
src/projects/Sudoku/: main.cc
src/projects/Sudoku/shaders/: draw.cs.glsl
src/projects/Verdure/: main.cc
src/projects/Verdure/shaders/: draw.cs.glsl  grass.cs.glsl
src/projects/Voraldo13/: dataStructs.h  main.cc  menuConfig.json  menuConfig.yaml  voraldo.h  voraldoImguiUtils.cc  voraldoUtils.cc
src/projects/Voraldo13/shaders/: ditherPalette.cs.glsl  ditherQuantize.cs.glsl  draw.cs.glsl  tonemap.cs.glsl
src/projects/Voraldo14/: main.cc  menu.yaml
src/projects/Voraldo14/shaders/: draw.cs.glsl
src/projects/VoxelSpace/CommancheMaps/: main.cc
src/projects/VoxelSpace/Erosion/: main.cc
src/projects/VoxelSpace/Physarum/: main.cc
src/utils/: gif.h
src/utils/ImGUI/: imgui_impl_opengl3.cpp  imgui_impl_sdl3.cpp
src/utils/ImGUI/LegitProfiler/: ImGuiProfilerRenderer.h  ProfilerTask.h
src/utils/ImGUI/TextEditor/: TextEditor.cc  TextEditor.h
src/utils/SoftRast/: SoftRast.h
src/utils/debug/: debug.h
src/utils/erosion/: particleBased.h
src/utils/fftw-3.3.10/: CMakeLists.txt
src/utils/fonts/fontRenderer/: renderer.h
src/utils/imGuIZMO.quat/: .gitignore  readme.md
src/utils/trident/: trident.h
(+90 files in other folders)
